--- a/.cargo/config
+++ b/.cargo/config
@@ -1,2 +1,4 @@
-[target.x86_64-pc-windows-msvc]
-linker = "rust-lld"
+#[build]
+#target = "x86_64-pc-windows-msvc"
+#[target.x86_64-pc-windows-msvc]
+#linker = "rust-lld"
