--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "sys/OpenXR-SDK"]
 	path = sys/OpenXR-SDK
-	url = https://github.com/KhronosGroup/OpenXR-SDK.git
+	url = git@github.com:Matthias-Fauconneau/OpenXR-SDK.git
